[package]
name = "iproto"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/oleggator/iproto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "rt", "net", "sync", "io-util", "time",
    "test-util", "macros", "parking_lot",
] }
rmp-serde = "0.15"
serde = "1.0"
sharded-slab = "0.1"
rmp = "^0.8"
futures = "0.3"
nix = "0.23"
sha-1 = "0.9"
base64 = "0.13"
thiserror = "1.0"
rmpv = { version = "1.0", features=["with-serde"] }

[workspace]
members = ["bench"]

[profile.dev]
opt-level = 3
