[package]
name = "iproto"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/oleggator/iproto"
description = "Tarantool iproto protocol implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "rt", "net", "io-util", "time", "tracing",
    "test-util", "macros", "parking_lot", "sync"
] }
rmp-serde = "1.1"
serde = "1.0"
sharded-slab = "0.1"
rmp = "0.8"
futures = "0.3"
nix = { version="0.30", features = ["socket"] }
sha-1 = "0.10"
base64 = "0.22"
thiserror = "2.0"
rmpv = { version = "1.3", features = ["with-serde"] }
futures-lite = "2.6.0"

[workspace]
members = ["tests/bench"]

[profile.release]
lto = true
codegen-units = 1
