[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde_json = "1.0"
futures = "0.3"
hdrhistogram = "7.2"
tokio = { version = "0.2", features = ["full"] }
#tokio-util = {version = "0.3", features= ["codec"]}
serde = { version = "1.0", features = ["derive"] }
#serde_derive = "1.0"
#rmp = "0.8"
#rmp-serde = "0.14"
#rmp-serialize = "0.8"
#rmpv = { version = "0.4", features = ["with-serde"] }
#deadpool = "0.8"
#async-trait = "0.1"

[dependencies.iproto]
path = ".."
