[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hdrhistogram = "7.2"
tokio = { version = "1", features = ["full", "tracing"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.4"

[dependencies.iproto]
path = ".."

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.2"
